--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
@@ -15,6 +16,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
