--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://covid.adhamnasr.com"
+  "homepage": "https://adham-123.github.io/covid19/"
 }
